[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/effects/CameraStopObject.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/Sprites/Objects/GateVertical.png" type="Texture" id=2]
[ext_resource path="res://src/objects/BossGateVertical.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 96, 24 )

[sub_resource type="Animation" id=2]
resource_name = "Close"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 13, 12, 11, 10, 8, 6, 5, 4, 3, 2, 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 13, 12, 11, 10, 9, 8, 6, 5, 3, 2, 1, 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Open"
length = 1.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4, 0.5, 0.6, 0.65, 0.7, 0.75, 0.8, 0.9, 1, 1.1, 1.2, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4, 0.5, 0.6, 0.65, 0.7, 0.75, 0.8, 0.9, 1, 1.1, 1.2, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 96, 12 )

[node name="BossGateVertical" type="StaticBody2D"]
collision_mask = 3
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.249997, 28 )
scale = Vector2( 2, 2 )
z_index = -1
texture = ExtResource( 2 )
hframes = 3
vframes = 5

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 0, -28 )
scale = Vector2( 2, 2 )
z_index = -1
texture = ExtResource( 2 )
hframes = 3
vframes = 5

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 24 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Close = SubResource( 2 )
anims/Open = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="CameraStopObject" parent="." instance=ExtResource( 1 )]
position = Vector2( -104, 0 )
is_persistent = true

[node name="PlayerCheckArea" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionBottom" type="CollisionShape2D" parent="PlayerCheckArea"]
position = Vector2( 0, 60 )
shape = SubResource( 5 )

[node name="CollisionTop" type="CollisionShape2D" parent="PlayerCheckArea"]
position = Vector2( 0, -60 )
shape = SubResource( 5 )

[node name="Camera" type="Camera2D" parent="."]
